Shading problems with Autosmooth & Material Transparency #41862

Closed
opened 2014-09-17 21:51:52 +02:00 by Karja Krähwald · 8 comments

System Information
Windows 7 64, HD 5770

Blender Version
Broken: 9337574 (2.71 release) + f0f398d

Short description of error
Blender Render:
Viewport shading in texture mode has problems with Autosmooth:

  • if minimum 2 materials are assigned on the mesh
  • if they differ in their transparency checkbox setting (enabled or not)
  • if Properties>Object>Display>Transparency is checked.
    (All three must be true at the same time)

This seems only visible in Objectmode, Editmode and Render arent affected.

Exact steps for others to reproduce the error
AutosmoothShadingBug.blend

  • Add a Lamp (Point).
  • Add a Cube.
    • Go to Properties>Object Data>Normals>enable Autosmooth.
    • Go to Properties>Object>Display>enable Transparency.
    • Give Cube 2 materials (different color).
      • Assign them both on the mesh.
      • Enable Transparency for only one material.
  • Set Viewport to Blender Render & Textured Mode.

Problem: Wrong shading and shadows in Objectmode.

Note that if you assign only transparent materials, or only non-transparent materials on the mesh, the problems disappear.

**System Information** Windows 7 64, HD 5770 **Blender Version** Broken: 9337574 (2.71 release) + f0f398d **Short description of error** Blender Render: Viewport shading in texture mode has problems with Autosmooth: - if minimum 2 materials are assigned on the mesh - if they differ in their transparency checkbox setting (enabled or not) - if Properties>Object>Display>Transparency is checked. (All three must be true at the same time) This seems only visible in Objectmode, Editmode and Render arent affected. **Exact steps for others to reproduce the error** [AutosmoothShadingBug.blend](https://archive.blender.org/developer/F110921/AutosmoothShadingBug.blend) - Add a Lamp (Point). - Add a Cube. - Go to Properties>Object Data>Normals>enable Autosmooth. - Go to Properties>Object>Display>enable Transparency. - Give Cube 2 materials (different color). - Assign them both on the mesh. - Enable Transparency for only one material. - Set Viewport to Blender Render & Textured Mode. **Problem:** Wrong shading and shadows in Objectmode. Note that if you assign only transparent materials, or only non-transparent materials on the mesh, the problems disappear.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @karja

Added subscriber: @karja

#41684 is similar or maybe same problem. It could be linked or merged, but I dont know how to do that.

#41684 is similar or maybe same problem. It could be linked or merged, but I dont know how to do that.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

@karja, they might be related, but #41684 is a problem in the gameengine. whereas this is blender-renderer.

@karja, they might be related, but #41684 is a problem in the gameengine. whereas this is blender-renderer.

This issue was referenced by 3c28eecb6e

This issue was referenced by 3c28eecb6e66313422cdfccc52431b945030fb8c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3c28eecb6e.

Closed by commit 3c28eecb6e.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41862
No description provided.