Fix T41862: Autosmooth & multi-material glitch